# clockin-android

./: .gitignore  pyproject.toml
.github/workflows/: build.yml
src/clockin/: __init__.py  app.py
